Добавлена сбора для Pages

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,13 +5,14 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "composite": true,
+    "emitDeclarationOnly": true, // Это может быть полезно, если вы хотите только .d.ts файлы
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
 
     /* Linting */
     "strict": true,
