--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "module": "commonjs",
     "jsx": "react",
     "esModuleInterop": true,
-    "strict": true, 
-    "skipLibCheck": true 
+    "strict": true,
+    "skipLibCheck": true,
+    "composite": true
   },
   "files": [],
   "references": [
